# TDD_EmbeddedC

./: .gitmodules  README.md
CppUTest/: .gitignore  CMakeLists.txt  README.md
CppUTest/Include/HomeAutomation/: LightController.h
CppUTest/Include/Util/: CircularBuffer.h  RuntimeError.h  Utils.h
CppUTest/Mock/: CMakeLists.txt  FakeRandomMinute.h  FakeTimeService.cpp  LightControllerSpy.h  MockIO.cpp  RuntimeErrorStub.h
CppUTest/Src/: funcC.c  funcCC.cpp
CppUTest/Src/HomeAutomation/: CMakeLists.txt  RandomMinute.cpp
CppUTest/Src/LedDriver/: CMakeLists.txt
CppUTest/Src/Util/: CMakeLists.txt
CppUTest/Test/: AllTests.cpp  CMakeLists.txt
CppUTest/Test/HomeAutomation/: LightSchedulerRandomizeTest.cpp  LightSchedulerTest.cpp  RandomMinuteTest.cpp
CppUTest/Test/IO/: FlashTest.cpp  FlashTest2.cpp  FlashTest_CppUMock.cpp
CppUTest/Test/LedDriver/: LedDriverTest.cpp
CppUTest/Test/Mock/: FakeTimeServiceTest.cpp  FormatOutputSpyTest.cpp  LightControllerSpyTest.cpp
CppUTest/Test/Util/: CircularBufferPrintTest.cpp
GoogleTest/: CMakeLists.txt  README.md
GoogleTest/Include/HomeAutomation/: LightScheduler.h
GoogleTest/Include/IO/: Flash_Class.h  IIO_Class.h  IO_Class.h
GoogleTest/Include/LedDriver/: LedDriver.h
GoogleTest/Mock/: CMakeLists.txt  FakeMicroTime.h  FakeTimeService.h  FormatOutputSpy.cpp  LightControllerSpy.cpp  MockIO.cpp  MockIO.h
GoogleTest/Src/: CMakeLists.txt  Main.cpp
GoogleTest/Src/HomeAutomation/: LightScheduler.cpp
GoogleTest/Src/IO/: CMakeLists.txt  Flash_Class.cpp  IO_Class.cpp
GoogleTest/Src/LedDriver/: LedDriver.c
GoogleTest/Src/Util/: CircularBuffer.c  Utils.c
GoogleTest/Test/: AllTests.cpp  CMakeLists.txt
GoogleTest/Test/HomeAutomation/: LightSchedulerRandomizeTest.cpp  LightSchedulerTest.cpp  RandomMinuteTest.cpp
GoogleTest/Test/IO/: FlashTest.cpp  FlashTest2.cpp  FlashTest_Class.cpp  FlashTest_GoogleMock_C.cpp  FlashTest_GoogleMock_CPP.cpp
GoogleTest/Test/LedDriver/: LedDriverTest.cpp
GoogleTest/Test/Mock/: FakeTimeServiceTest.cpp  FormatOutputSpyTest.cpp  LightControllerSpyTest.cpp
GoogleTest/Test/Util/: CircularBufferPrintTest.cpp
Others/HowToSwitchToMock/: README.md
Others/HowToSwitchToMock/MockByCInterface/Include/: DeviceDriverX.h  IO.h  IOMemReg.h  IOMock.h  IO_private.h
Others/HowToSwitchToMock/MockByCInterface/Src/: DeviceDriverX.c  IO.c  IOMemReg.c  IOMock.c  Main.c
Others/HowToSwitchToMock/MockByFunctionPointer/: CMakeLists.txt
Others/HowToSwitchToMock/MockByFunctionPointer/Include/: DeviceDriverX.h  IO.h
Others/HowToSwitchToMock/MockByFunctionPointer/Src/: CMakeLists.txt  DeviceDriverX.c  IO.c  Main.c
Others/HowToSwitchToMock/MockByInterface/Include/: DeviceDriverX.h  IIO.h  IO.h  IOMock.h
Others/HowToSwitchToMock/MockByInterface/Src/: DeviceDriverX.cpp  IO.cpp  IOMock.cpp  Main.cpp
Others/HowToSwitchToMock/MockByVTable/Include/: DeviceDriverX.h  IO.h
Others/HowToSwitchToMock/MockByVTable/Src/: IO.c  Main.c
Others/HowToSwitchToMock/MockByVTableAndOSALWrapper/: CMakeLists.txt
Others/HowToSwitchToMock/MockByVTableAndOSALWrapper/Include/: OSMock.h  OSWrapper.h
Others/HowToSwitchToMock/MockByVTableAndOSALWrapper/OS/: CMakeLists.txt
Others/HowToSwitchToMock/MockByVTableAndOSALWrapper/OS/Include/: OS.h
Others/HowToSwitchToMock/MockByVTableAndOSALWrapper/OS/Src/: OS.c
Others/HowToSwitchToMock/MockByVTableAndOSALWrapper/Src/: CMakeLists.txt  Main.c  OSMock.c  OSWrapper.c  Test.c
Others/HowToSwitchToMock/MockByVTableAndWrapper/Include/: IO.h  IOWrapper.h
Others/HowToSwitchToMock/MockByVTableAndWrapper/Src/: DeviceDriverX.c  IO.c  IOWrapper.c  Main.c
Qiita/: Qiita_TDD.MD  Qiita_TDD.pptx
Unity/: CMakeLists.txt  README.md  generate_TEST_RUNNER.py
Unity/Include/: MyFunc.h  common.h
Unity/Include/HomeAutomation/: RandomMinute.h
Unity/Include/IO/: Flash.h  IO.h  m28w160ect.h
Unity/Include/LedDriver/: LedDriver.h
Unity/Include/Util/: MicroTime.h  TimeService.h
Unity/Mock/: CMakeLists.txt  FakeMicroTime.c  FakeRandomMinute.c  FormatOutputSpy.h  MockIO.c  MockIO_cmock.c  MockIO_cmock.h  RuntimeErrorStub.c
Unity/Src/: CMakeLists.txt  Main.c  MyFunc.c  RuntimeError.c
Unity/Src/HomeAutomation/: LightScheduler.c
Unity/Src/IO/: Flash.c  IO.c
Unity/Src/LedDriver/: LedDriver.c
Unity/Src/Util/: RuntimeError.c
Unity/Test/: AllTests.c  CMakeLists.txt  MyFunc2XTest.c  MyFuncMemsetTest.c  SprintfTest.c  SprintfTestRunner.c
Unity/Test/HomeAutomation/: LightSchedulerRandomizeTest.c  LightSchedulerTest.c  RandomMinuteTest.c
Unity/Test/IO/: FlashTest.c  FlashTest_cmock.c
Unity/Test/LedDriver/: LedDriverTest.c  LedDriverTestRunner.c
Unity/Test/Mock/: FakeTimeServiceTest.c  FormatOutputSpyTest.c  LightControllerSpyTest.c  RuntimeErrorStub.c
Unity/Test/Util/: CircularBufferPrintTest.c
